# Atlan

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  build.sh
include/: AIEngine.h  CodeGenerator.h  LearningModule.h  MainWindow.h  NetworkManager.h
src/: AIEngine.cpp  CodeGenerator.cpp  LearningModule.cpp  MainWindow.cpp  NetworkManager.cpp  main.cpp
